WIP: Fix #111780: bone collections and undo don't work together

The general approach for fixing this is to do the same thing for
Bone Collections that's done for Edit Bones: duplicate them on the
undo stack.  With the additional consideration that the undo edit
bones have their membership listbase remapped to point at those
copies.